--- a/src/main/resources/templates/vehicles.html
+++ b/src/main/resources/templates/vehicles.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+		xmlns:temporals="http://www.thymeleaf.org/extras/java8time">
+
 	<head>
 	    <meta charset="UTF-8">
 	    <title>Login</title>
+	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+
 	</head>
 	<body>
 	    <h1 align="center">Транспортные средства</h1>
@@ -16,23 +20,40 @@
 	    		<th> Количество владельцев </th>
 	    		<th> Марка </th>
 	    		<th> Цена </th>
+	    		<th> Время продажи </th>
 	    		<th> Действия </th>
+	    		
 	    	</thead>
 	    	
-	    	<tbody th:each="vehicle : ${vehicleList}" border="1px">
+	    	<tbody th:each="vehicle : ${vehiclePage.getContent()}" border="1px">
 	    		<th>[[${vehicle.getProductionYear()}]]</th>
 	    		<th>[[${vehicle.getBodyColor()}]]</th>
 	    		<th>[[${vehicle.getMileage()}]]</th>
 	    		<th>[[${vehicle.getNumberOfOwners()}]]</th>
 	    		<th>[[${vehicle.getBrand().getName()}]]</th>
 	    		<th>[[${vehicle.getPrice()}]]</th>
+	    		<th th:text="${date.format(vehicle.getSellDate())}"></th>
+
 	    		<th>
-	    			<form th:action="@{/update/} + ${vehicle.getUuid()} + '/vehicle'" method="get">
-	    				<button type="submit" >Обновить</button>
-	    			</form>
-	    			<form th:action="@{/vehicle/} + ${vehicle.getUuid()}" method="delete">
-	    				<button type="submit" >Удалить</button>
-	    			</form>
+	    			   <a class="icon-link" href="#">
+						    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+						      <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+						    </svg>
+    					</a>
+    				<a class="icon-link" href="#">
+
+	    				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+					  		<path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+					  		<path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+						</svg>
+					</a>
+					<a class="icon-link" th:href="@{'http://localhost:8082/view/vehicle/' + ${vehicle.getUuid()} + '/routes?pageNumber=0&pageSize=10'}">
+
+	    				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-signpost" viewBox="0 0 16 16">
+  							<path d="M7 1.414V4H2a1 1 0 0 0-1 1v4a1 1 0 0 0 1 1h5v6h2v-6h3.532a1 1 0 0 0 .768-.36l1.933-2.32a.5.5 0 0 0 0-.64L13.3 4.36a1 1 0 0 0-.768-.36H9V1.414a1 1 0 0 0-2 0zM12.532 5l1.666 2-1.666 2H2V5h10.532z"/>
+						</svg>
+					</a>
+					
 	    		</th>
 	    	</tbody>
 	    
